[gd_scene load_steps=2 format=3 uid="uid://bjws6rexicqo0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_f7827"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7827")

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 396.0
offset_right = 737.0
offset_bottom = 534.0
text = "Exit"

[node name="btnStart" type="Button" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 156.0
offset_right = 721.0
offset_bottom = 288.0
text = "Start
"
